# Browser-Agent

./: .dockerignore  .gitignore  ABOUT.md  ACCURACY_AND_SCALE.md  AGENT_ARCHITECTURE.md  AGENT_CASES.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  PLAN.md  PLANNING.md  PROBLEMS_AND_SOLUTIONS.md  README.md  SYSTEM_DESIGN.md  env.example  langchain.md  pyproject.toml  tasks.txt  todo.txt
config/: profile.yaml
config/tasks/: 01-github-workday-join.yaml  02-linear-tickets.yaml  03-github-commits-audit.yaml  03-github-issue.yaml  04-linkedin-enrichment.yaml  05-workday-form-download.yaml
docker/: compose.yaml
memory/: MEMORY.md  project_andera_trial.md  user_preferences.md
runs/run-046d0e1f/: .run_config.json
runs/run-0bc2622a/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-0e0c3bea/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-131f13bc/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-1f875bc2/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-34c5f250/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-3a2f4e33/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-3cf0b5e1/: .run_config.json
runs/run-51706a06/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-51a48261/: .run_config.json  RUN_MANIFEST.json  input.csv  output.csv  samples.jsonl
runs/run-6cc1fae5/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-75f0f6f9/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-85ba94e3/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-934b69fd/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-b15bb414/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-bd491665/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-c0276d65/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-c82afeac/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-cc92dba8/: .run_config.json
runs/run-dc633a67/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-debug/: .run_config.json  RUN_MANIFEST.json
runs/run-debug2/: .run_config.json  RUN_MANIFEST.json
runs/run-debug3/: .run_config.json  RUN_MANIFEST.json
runs/run-demo/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-demo-auto/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-demo2/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-demo3/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-demo4/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-demo5/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-demo6/: .run_config.json  RUN_MANIFEST.json  output.csv  samples.jsonl
runs/run-demo7/: .run_config.json  (+3 more)
scripts/: run_one_sample.py  seed_mock_workday.py  smoke_browser.py
spec/: Andera Work Trial.docx  Andera Work Trial.md
(+171 files in other folders)
